k8config/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: snowflake-id
  labels:
    k8-playground/name: snowflake-id
spec:
  serviceName: snowflake-id
  replicas: 2
  selector:
    matchLabels:
      k8-playground/name: snowflake-id
  template:
    metadata:
      labels:
        k8-playground/name: snowflake-id
    spec:
      securityContext:
        {}
      containers:
        - name: snowflake-id
          securityContext:
            {}
          image: "nginx:stable-alpine"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: "1"
              memory: 64Mi
            requests:
              cpu: "1"
              memory: 32Mi
